continuum/autonomous/v0.2.4-quality/reports/m3-red-capture.txt
   Compiling tldr-core v0.2.3 (/Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-core)
   Compiling tldr-mcp v0.2.3 (/Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-mcp)
   Compiling tldr-daemon v0.2.3 (/Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-daemon)
   Compiling tldr-cli v0.2.3 (/Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli)
error[E0425]: cannot find function `params_with_file_lang` in this scope
   --> crates/tldr-cli/src/commands/daemon_router.rs:342:22
    |
230 | pub fn params_with_path_lang(path: &Path, lang: Option<&str>) -> serde_json::Value {
    | ---------------------------------------------------------------------------------- similarly named function `params_with_path_lang` defined here
...
342 |         let params = params_with_file_lang(Path::new("/tmp/myscript"), Some("python"));
    |                      ^^^^^^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `params_with_path_lang`

error[E0425]: cannot find function `params_with_file_lang` in this scope
   --> crates/tldr-cli/src/commands/daemon_router.rs:349:22
    |
230 | pub fn params_with_path_lang(path: &Path, lang: Option<&str>) -> serde_json::Value {
    | ---------------------------------------------------------------------------------- similarly named function `params_with_path_lang` defined here
...
349 |         let params = params_with_file_lang(Path::new("/tmp/myscript"), None);
    |                      ^^^^^^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `params_with_path_lang`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `tldr-cli` (lib test) due to 2 previous errors
    Blocking waiting for file lock on build directory
   Compiling tldr-cli v0.2.3 (/Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli)
    Finished `test` profile [unoptimized + debuginfo] target(s) in 41.27s
     Running tests/cli_p1_tests.rs (target/debug/deps/cli_p1_tests-4d0f4b5275ce61d2)

running 6 tests
test imports_command::test_imports_command_exists ... ok
test imports_command::test_imports_error_missing_file ... ok
test imports_command::test_imports_lang_flag_on_extensionless_file ... FAILED
test imports_command::test_imports_with_lang_flag ... ok
test imports_command::test_imports_auto_detect_language ... ok
test imports_command::test_imports_returns_array ... ok

failures:

---- imports_command::test_imports_lang_flag_on_extensionless_file stdout ----

thread 'imports_command::test_imports_lang_flag_on_extensionless_file' (209159738) panicked at /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/ops/function.rs:250:5:
Unexpected failure.
code=11
stderr=```"Error: Unsupported language: unknown\n"```
command=`"/Users/cosimo/Desktop/PatchWork/tldr-code/target/debug/tldr" "imports" "/var/folders/mm/p97ntk792cn9y44grpf_zn740000gn/T/.tmpPWIN5Y/myscript" "--lang" "python" "-q"`
code=11
stdout=""
stderr="Error: Unsupported language: unknown\n"

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace


failures:
    imports_command::test_imports_lang_flag_on_extensionless_file

test result: FAILED. 5 passed; 1 failed; 0 ignored; 0 measured; 21 filtered out; finished in 1.72s

error: test failed, to rerun pass `-p tldr-cli --test cli_p1_tests`
